// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDismissibleChip should ignore setting a trailing accessory view, resulting in a close icon 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--primary"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should override setting selected={true}, resulting in selected={false} 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--primary"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--primary"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--primary custom-class"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="light" 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--light"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="light" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--light"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="light" and disabled 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--light bpk-chip--disabled"
    disabled=""
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="primary" 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--primary"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="primary" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--primary"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="primary" and disabled 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--primary bpk-chip--disabled"
    disabled=""
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="success" 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--success"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="success" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--success"
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDismissibleChip should render correctly with type="success" and disabled 1`] = `
<DocumentFragment>
  <button
    class="bpk-chip bpk-chip--success bpk-chip--disabled"
    disabled=""
    role="button"
    title="Dismiss"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Dismiss me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 1 0 1.5 12 10.5 10.5 0 0 0 12 22.5zM7.938 7.94h.002a1.5 1.5 0 0 1 2.12 0L12 9.878l1.94-1.94a1.5 1.5 0 0 1 2.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 0 1-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 0 1-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 0 1 0-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
